deployments/k8s/local/monolith/monolith.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monolith
  namespace: mono
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monolith
  template:
    metadata:
      labels:
        app: monolith
        benchmark.skripsi.dev/architecture: monolith
        tags.datadoghq.com/env: development
        tags.datadoghq.com/service: monolith
        tags.datadoghq.com/version: local
    spec:
      terminationGracePeriodSeconds: 20
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: monolith
          image: skripsi/monolith:local
          imagePullPolicy: Never
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 12
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
          resources:
            requests:
              cpu: 1000m
              memory: 1024Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: monolith
  namespace: mono
spec:
  selector:
    app: monolith
  ports:
    - name: http
      port: 8080
      targetPort: http
