deployments/k8s/local/monolith/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monolith
  namespace: mono
spec:
  ingressClassName: nginx
  rules:
    - host: monolith.skripsi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monolith
                port:
                  number: 8080
